--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,25 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Spent</title>
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="spent icon 16x16.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="spent icon 32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="48x48"
-      href="spent icon 48x48.png"
-    />
+    <title>Truffle Dog Digital CRM</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="crm-16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="crm-32.png" />
+    <link rel="icon" type="image/png" sizes="48x48" href="crm-48.png" />
   </head>
   <body>
     <div id="root"></div>
