Ground-up rewrite of UI.  Basic structure set up, no functionality.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Truffle Dog Digital CRM</title>
-    <link rel="icon" type="image/png" sizes="16x16" href="crm-16.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="crm-32.png" />
-    <link rel="icon" type="image/png" sizes="48x48" href="crm-48.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/crm-16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/crm-32.png" />
+    <link rel="icon" type="image/png" sizes="48x48" href="/crm-48.png" />
+    <link rel="icon" type="image/png" sizes="64x64" href="/crm-64.png" />
+    <link rel="icon" type="image/png" sizes="128x128" href="/crm-128.png" />
+    <link rel="icon" type="image/png" sizes="740x740" href="/crm-740.png" />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
