update connected (just logging to console) is working with no dupes.  withdraw appears to be still working, but nothing to withdraw, so..

--- a/extension/linkedin.html
+++ b/extension/linkedin.html
@@ -2,4 +2,7 @@
   <button id="reabilityLinkedinWithdraw" class="reabilityMuiButton">
     Withdraw
   </button>
+  <button id="reabilityUpdateConnected" class="reabilityMuiButton">
+    Update Connected
+  </button>
 </div>
