Production switch in, no function yet.

--- a/extension/drawer.html
+++ b/extension/drawer.html
@@ -3,5 +3,12 @@
     <h1>Reability</h1>
     <button id="reabilityDrawerCloseButton">-</button>
   </div>
+  <div class="switch-container">
+    <label for="productionSwitch" class="switch-label">Production</label>
+    <label class="switch">
+      <input type="checkbox" id="productionSwitch" />
+      <span class="slider"></span>
+    </label>
+  </div>
   <div id="reabilityDrawerContent"></div>
 </div>
