Refactored Lusha Contacts to use just cmd-c, removed buttons and the use of local storage

--- a/extension/src/lusha-contacts.html
+++ b/extension/src/lusha-contacts.html
@@ -1,6 +1,1 @@
-<div class="button-container">
-  <button id="reabilityLushaListGrab" class="reabilityMuiButton">
-    Grab Contacts
-  </button>
-  <button id="clearProfiles" class="reabilityMuiButton">Clear</button>
-</div>
+<div class="button-container"></div>
