Refactored linkedin-update-conencted to remove buttons and just use clipboard copy ie cmd-c

--- a/extension/src/linkedin-update-connected.html
+++ b/extension/src/linkedin-update-connected.html
@@ -1,5 +1,1 @@
-<div class="button-container">
-  <button id="reabilityUpdateConnected" class="reabilityMuiButton">
-    Update Connected
-  </button>
-</div>
+<div class="button-container"></div>
